z-index fixes for richeditor toolbar.
Fixes #4868. Related to https://github.com/octobercms/october/commit/d7b0e55ceb257abaaba43c04f55585b77f220fba.

--- a/modules/backend/formwidgets/richeditor/assets/less/richeditor.less
+++ b/modules/backend/formwidgets/richeditor/assets/less/richeditor.less
@@ -116,6 +116,10 @@
     z-index: 9995 !important;
 }
 
+.fr-toolbar {
+    z-index: 11 !important;
+}
+
 //
 // Stretch
 //
